--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,18 +19,20 @@ jobs:
     - name: Install Qt dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential libgl1-mesa-dev
-
-    - name: Install Qt
-      run: |
-        sudo apt-get install -y qt5-default qtbase5-dev qtdeclarative5-dev qttools5-dev-tools
+        sudo apt-get install -y \
+          build-essential \
+          libgl1-mesa-dev \
+          qtbase5-dev \
+          qtchooser \
+          qt5-qmake \
+          qtbase5-dev-tools
 
     - name: Build project
       run: |
-        qmake -qt=qt5
+        qmake
         make
 
-  
+ 
     - name: Deploy
       if: success() && github.event_name == 'push' && github.ref == 'refs/heads/main'
       run: |
