--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Build project
       run: |
-        qmake path/to/your/project.pro
+        qmake TicTacToeProjectfinal/TicTacToeProject/TicTacToeProject.pro
         make
 
     - name: Run tests
@@ -46,4 +46,3 @@ jobs:
     - name: Cleanup
       run: |
         make clean  # Clean up build artifacts
-
