--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,12 +16,18 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Set up Visual Studio Build Tools
+      uses: ilammy/msvc-dev-cmd@v1
+      with:
+        arch: x64
+
     - name: Set up Qt
       uses: jurplel/install-qt-action@v2
       with:
         version: '5.15.2'  # Specify the Qt version you need
         host: 'windows'
         target: 'desktop'
+        setup-python: true
 
     - name: Build project
       run: |
