--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,11 +42,21 @@ jobs:
 
     - name: Deploy Qt dependencies
       run: |
-        # Ensure windeployqt is in the PATH
-        $Env:PATH += ";$Env:Qt5_15_2_MSVC2019_64_BIN"
+        # Specify the path to the windeployqt executable
+        $windeployqtPath = "$Env:Qt5_15_2_MSVC2019_64_BIN\windeployqt.exe"
+        
+        # Verify the path exists
+        if (-Not (Test-Path $windeployqtPath)) {
+          throw "windeployqt not found at $windeployqtPath"
+        }
         
         # Deploy Qt dependencies to the directory with the .exe
-        windeployqt TicTacToeProjectfinal/TicTacToeProject/release/TicTacToeProject.exe
+        & $windeployqtPath TicTacToeProjectfinal/TicTacToeProject/release/TicTacToeProject.exe
+        
+        # Check for errors
+        if ($LASTEXITCODE -ne 0) {
+          throw "windeployqt failed with exit code $LASTEXITCODE"
+        }
 
     - name: Upload artifact
       uses: actions/upload-artifact@v2
